crates/traits/tests/snapshots/snapshots__event_fork_recovered.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupEvent::ForkRecovered\n{\n    group_id: gid(), source_epoch: EpochId(1), recovered_epoch: EpochId(2),\n    winner: CommitOrderingKey\n    { source_epoch: EpochId(1), commit_digest: [0xAA; 32], },\n    invalidated: CommitOrderingKey\n    { source_epoch: EpochId(1), commit_digest: [0xBB; 32], },\n}"
---
{
  "ForkRecovered": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "source_epoch": 1,
    "recovered_epoch": 2,
    "winner": {
      "source_epoch": 1,
      "commit_digest": [
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170,
        170
      ]
    },
    "invalidated": {
      "source_epoch": 1,
      "commit_digest": [
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187,
        187
      ]
    }
  }
}
