crates/traits/tests/snapshots/snapshots__group_capabilities.snap
---
source: crates/traits/tests/snapshots.rs
expression: caps
---
{
  "proposals": [
    10
  ],
  "extensions": [
    62187
  ]
}
