crates/traits/tests/snapshots/snapshots__participation_evicted.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupParticipation::Evicted"
---
"Evicted"
