crates/traits/tests/snapshots/snapshots__participation_quarantined.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupParticipation::Quarantined"
---
"Quarantined"
