crates/traits/tests/snapshots/snapshots__participation_quarantined_integrity_hold.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupParticipation::Quarantined { reason: QuarantineReason::IntegrityHold }"
---
{
  "Quarantined": {
    "reason": "IntegrityHold"
  }
}
