crates/traits/tests/snapshots/snapshots__participation_quarantined_pending_membership.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupParticipation::Quarantined\n{ reason: QuarantineReason::PendingMembership }"
---
{
  "Quarantined": {
    "reason": "PendingMembership"
  }
}
