crates/traits/tests/snapshots/snapshots__stale_evicted.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::Evicted }"
---
{
  "Stale": {
    "reason": "Evicted"
  }
}
