crates/traits/tests/snapshots/snapshots__status_unavailable.snap
---
source: crates/traits/tests/snapshots.rs
expression: "FeatureStatus::Unavailable { missing }"
---
{
  "Unavailable": {
    "missing": {
      "proposals": [
        10
      ],
      "extensions": []
    }
  }
}
